# EchoOCPP

./: .gitignore  CMakeLists.txt  LICENSE  client.cpp  main.cpp  moduleTest.cppm  server.cpp  vcpkg.json
app/: CMakeLists.txt
app/CenterSystem/: CMakeLists.txt  CoreSystem.cpp  CoreSystem.hpp
app/EndPointer/: CMakeLists.txt  ChargePoint.cpp  ChargePoint.hpp  CoreSystem.cpp  CoreSystem.hpp  WebsocketClientManager.cpp  WebsocketClientManager.hpp
app/EndPointer/OCPP201/: OCPPManager.cpp  OCPPManager.hpp
config/: BaseInfo.json  ComponentVariableConfigure.json  ConfigureKeyAuthorization.json  ConfigureKeyAuthorizationCache.json  ConfigureKeyGeneral.json  ConfigureKeyLocalAuthorization.json  ConfigureKeySecurity.json  ConfigureKeyTransaction.json  CoreSystem.json  RuntimeData.json  Variables.json
src/: CMakeLists.txt  Utilies.hpp
src/App/: CMakeLists.txt
src/App/CenterSystem/: CoreSystem.cpp  CoreSystem.hpp
src/DataInterface/: CMakeLists.txt  DeviceDataInterface.cpp  DeviceDataInterface.hpp  InterfaceType.hpp
src/Devices/: Connector.hpp  EVSE.hpp  Meter.hpp  RealTimeData.hpp
src/Devices/Configure/: BaseInfo.hpp  ConfigureManager.hpp  OCPP201ConfigureManager.hpp
src/LogComponent/: CMakeLists.txt  ILogComponent.hpp  LogComponent.cpp  LogComponent.hpp
src/MessageQueue/: CMakeLists.txt  MQDealer.cpp  MQDealer.hpp  MQRouter.cpp  MQRouter.hpp  MQStatus.hpp  ReqMQ.cpp  ReqMQ.hpp  protobufMessage.pb.cc  protobufMessage.pb.h  protobufMessage.proto
src/OCPP/: CMakeLists.txt  MessageBase.hpp
src/OCPP/201/Configure/: ConfigureVariables.hpp  VariableManager.hpp
src/OCPP/201/DataType/: Datatypes.hpp  Enumerations.hpp  PrimitiveDatatypes.hpp
src/OCPP/201/Devices/: Connector.hpp  EVSE.hpp  Meter.hpp
src/OCPP/201/Message/: AuthorizationManager.hpp  BootNotificationManager.hpp  ComponentVariableManager.hpp  HeartBeatManager.hpp  IMessageEventHandler.hpp  MessageManager.cpp  MessageManager.hpp  MessageRequest.hpp  MessageRespone.hpp  StatusNotificationManager.hpp  SystemManager.hpp  VariableManager.hpp
src/OCPP/201/Message/Provisioning/: BootEvent.hpp
src/OCPP/ChargePoint/: CMakeLists.txt  OCPPManager.cpp  OCPPManager.hpp
src/OCPP/ChargeStation/: CMakeLists.txt  OCPPCore.cpp  OCPPCore.hpp  OCPPManager.cpp  OCPPManager.hpp
src/OCPP/Utilies/: CMakeLists.txt  Helper.cpp  Helper.hpp  ThreadPool.hpp  Utilies.hpp
src/OCPP201/: Datatypes.hpp  Enumerations.hpp  PrimitiveDatatypes.hpp
src/OCPP201/ChargePoint/: CMakeLists.txt  OCPPManager.cpp  OCPPManager.hpp  OCPPRouter.cpp  OCPPRouter.hpp  ThreadPool.hpp
src/OCPP201/ChargePoint/MessageManager/: BootNotificationManager.hpp  HeartBeatManager.hpp  StatusNotificationManager.hpp
src/OCPP201/ConfigureKey/: ConfigureKeyGeneral.hpp
src/OCPP201/DataType/: Datatypes.hpp  Enumerations.hpp  PrimitiveDatatypes.hpp
src/OCPP201/Message/: AuthorizeRequest.hpp  MessageBase.hpp  MessageCall.hpp  MessageRequest.hpp  MessageRespone.hpp
src/OCPP201/Utilies/: CMakeLists.txt  Helper.cpp  Helper.hpp  Utilies.hpp
src/System/: IO.hpp
src/WebsocketComponent/: CMakeLists.txt  IWebsocketBase.hpp  IWebsocketClient.hpp  IWebsocketServer.hpp  WebsocketDefines.hpp  WebsocketServerComponent.cpp  WebsocketServerComponent.hpp  WebsocketStatus.hpp
src/WebsocketComponent/Client/: IWebsocketClient.hpp  WebsocketClient.cpp  WebsocketClient.hpp  WebsocketClientManager.cpp  WebsocketClientManager.hpp
src/WebsocketComponent/Server/: IWebsocketServer.hpp  WebsocketServer.cpp  WebsocketServer.hpp
test/: CMakeLists.txt  DatatypesTest.cpp  LogComponentTest.cpp  OCPP201ChargePointTest.cpp  OCPP201DatatypesTest.cpp
third_library/spdlog/: async.h  async_logger-inl.h  common.h  logger-inl.h  logger.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h
third_library/spdlog/cfg/: helpers-inl.h
third_library/spdlog/details/: circular_q.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg_buffer-inl.h  log_msg_buffer.h  os-inl.h  os.h  registry-inl.h  registry.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  udp_client-windows.h  udp_client.h
third_library/spdlog/fmt/: bin_to_hex.h  chrono.h  compile.h  fmt.h  ostr.h  ranges.h  std.h  xchar.h
third_library/spdlog/fmt/bundled/: core.h  format.h
third_library/spdlog/sinks/: ansicolor_sink-inl.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  callback_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  kafka_sink.h  mongo_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  stdout_color_sinks.h  stdout_sinks-inl.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  tcp_sink.h  udp_sink.h  win_eventlog_sink.h  wincolor_sink-inl.h  wincolor_sink.h
