add_library(
        OCPP201Utilies
        STATIC
        Helper.cpp
)

#target_link_libraries(
#        OCPP201Utilies
#)

#target_link_libraries(
#        ChargePointOCPP201
#        PRIVATE
#        cppzmq-static
#        protobuf::libprotoc
#        protobuf::libprotobuf
#        protobuf::libprotobuf-lite
#)
